--- a/html/films.html
+++ b/html/films.html
@@ -23,7 +23,7 @@
 
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back1">
-                                    <img src="../media/Titre Dragon Ball.jpg" alt="">
+                                    <img src="../Media films/Titre_Dragon_Ball-removebg-preview.png" alt="">
                                     <p>Bulma et ses compagnons tentent de récupérer les sept boules de cristal pendant
                                         que Sangoku et ses amis participent à un tournoi d'arts martiaux.</p>
                                     <img src="../Media films/Goku_petit-removebg-preview.png" alt="">
@@ -44,7 +44,7 @@
                                 </div>
 
                                 <div class="cardM__face cardM__face--back cardM__face--back2">
-                                    <img src="../Media films/Titre Dragon Ball Z Fusions.png" alt="">
+                                    <img src="../Media films/Titre_Dragon_Ball_Z_Fusions-removebg-preview.png" alt="">
 
 
                                     <p>Goku s’élève contre Janemba, un terrible monstre qui sème le chaos à la fois sur
@@ -99,11 +99,11 @@
                             <div class="cardM">
                                 <div class="cardM__face cardM__face--front bg4">
 
-                                    * <img src="../Media films/Titre Dragon Ball Super super hero.png">
+                                    * <img src="../Media films/Titre_Dragon_Ball_Super_super_hero-removebg-preview.png">
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back4">
 
-                                    <img src="../Media films/Titre Dragon Ball Super super hero.png" alt=""
+                                    <img src="../Media films/Titre_Dragon_Ball_Super_super_hero-removebg-preview.png" alt=""
                                         height="100">
                                     <p>L'armée du ruban rouge a déjà été détruite par Son Goku. Les individus qui
                                         perpétuent son esprit
@@ -139,7 +139,7 @@
                                         réduit à l'esclavage par des robots. C'est alors qu'apparaît un robot à
                                         l'effigie de Cooler.</p>
                                     <img src="../Media films/Cooler-removebg-preview.png" alt="">
-                                    <video src="" controls></video>
+                                    <video src="Media films/[CRÉATION] Bande-annonce Les cent mille guerriers de métal - VOSTFR.mp4" controls></video>
                                 </div>
                             </div>
                         </div>
@@ -149,18 +149,15 @@
                             <div class="cardM">
                                 <div class="cardM__face cardM__face--front bg6">
 
-                                    <img src="../" width="1000"
+                                    <img src="../Media films/filmdbzbojack.jpg" width="1000"
                                         height="700">
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back6">
 
                                     <img src="../Media films/Titre les mercenaires de l'espace.jpg" alt="" height="100">
-                                    <p>Le Cell Game s'est achevé sur un énorme sacrifice : Son Goku a donné sa vie pour
-                                        que son fils puisse finalement ramener la paix sur Terre. Mais le combat des
-                                        guerriers Z contre le plus parfait des cyborgs a attiré l'attention de nouveaux
-                                        ennemis qui mettent immédiatement cap sur notre planète.</p>
+                                    <p>Son Gohan et ses amis participent à un tournoi d'arts martiaux intergalactique qui a lieu dans l'espace. Quand le terrible Bojack et ses sbires se joignent à la fête, tous les combattants s'allient pour les vaincre..</p>
                                     <img src="../Media films/bojack-removebg-preview.png" alt="">
-                                    <video src="" controls></video>
+                                    <video src="../Media films/[TRADUCTION] DBZ - Film 09 - Trailer 2 - Les mercenaires de lespace [VOSTFR].mp4" controls></video>
                                 </div>
                             </div>
                         </div>
@@ -174,13 +171,13 @@
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back7">
 
-                                    <img src="titre" alt="" height="100">
+                                    <img src="../Media films/Titre_Super_Broly-removebg-preview.png" alt="" height="100">
                                     <p>Le Cell Game s'est achevé sur un énorme sacrifice : Son Goku a donné sa vie pour
                                         que son fils puisse finalement ramener la paix sur Terre. Mais le combat des
                                         guerriers Z contre le plus parfait des cyborgs a attiré l'attention de nouveaux
                                         ennemis qui mettent immédiatement cap sur notre planète.</p>
                                     <img src="personnage" alt="">
-                                    <video src="" controls></video>
+                                    <video src="../Media films/DRAGON BALL SUPER - BROLY - Bande-annonce Actuellement VF.mp4" controls></video>
                                 </div>
                             </div>
                         </div>
