--- a/html/Inscription-Login.html
+++ b/html/Inscription-Login.html
@@ -47,8 +47,8 @@
                     <label for="password">Mot de passe</label><br>
                     <input type="password" name="password" id="pswInsc" placeholder="mot de passe" required><br><br>
                     <label for="confirmpass">Confirmer mot de passe</label><br>
-                    <input type="password" name="confirmpass" id="conPswInsc" placeholder="retapez votre mot de passe" required><br><br>
-                    <input type="submit" value="envoyer demande" onclick="pshhhhhhhhhwshwsh()">
+                    <input type="password" name="confirmpass" id="conPswInsc" placeholder="retapez votre mot de passe" required oninvalid="this.setCustomValidity('Veuillez saisir un mot de passe identique')"><br><br>
+                    <input type="submit" value="envoyer demande" id="test" onclick="pshhhhhhhhhwshwsh0()">
                 </form>
             </div>
         </div>
