--- a/html/jeux.html
+++ b/html/jeux.html
@@ -11,6 +11,8 @@
 <body>
     <header></header>
 
+
+
     <main>
         <!-- TITRE -->
 
@@ -19,6 +21,10 @@
             <h1 id=jeuv>JEUX VIDE</h1>
             <h1 id=jvideo>O</h1>
         </div>
+
+
+        <img class="vg" src="/media/JeuxVideo/gif/gokuvegetaremovebg.png" width="20%" height="15%" alt="gif1v1">
+
 
         <!-- <div class="imgprez">
             <a href="#">
@@ -42,7 +48,7 @@
 
         <div class="dokkan">
             <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
+                <div class="row rowrange g-0">
                     <div class="col-md-4">
                         <img src="/media/Dragon-Ball-Z-Dokkan-Battle.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
@@ -50,18 +56,24 @@
                         <div class="card-body">
                             <h5 class="card-title">DOKKAN BATTLE</h5>
                             <p class="card-text">16 juil. 2015</p>
-                            <p class="card-text">iOS, Android</p>
+                            <p class="card-text1">iOS, Android</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-434894/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-            <video src="/media/JeuxVideo/dragon-ball-z-dokkan-battle-trailer.mp4" height="200" width="auto" autoplay
-                controls muted loop></video>
-            <img class="screenshots" src="/media/JeuxVideo/ssdokkan.jpg" alt="screendokkan" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/ssdokkan1.jpg" alt="screendokkan1" height="200" width="auto">
+            <video class="videos1" src="/media/JeuxVideo/dragon-ball-z-dokkan-battle-trailer.mp4" height="200"
+                width="auto" autoplay controls muted loop></video>
+            <img class="screenshotssmart" src="/media/JeuxVideo/ssdokkan.jpg" alt="screendokkan" height="200"
+                width="115">
+            <img class="screenshotssmart" src="/media/JeuxVideo/ssdokkan1.jpg" alt="screendokkan1" height="200"
+                width="115">
         </div>
+        <br><br>
+        <img class="gif1" src="/media/JeuxVideo/gif/crashed-goku.gif" width="35%" height="15%" alt="gif1v1">
+        <br><br>
+
 
         <!-- DB LEGENDS -->
 
@@ -75,39 +87,21 @@
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL LEGENDS</h5>
                             <p class="card-text">21 mai 2018</p>
-                            <p class="card-text">iOS, Android</p>
+                            <p class="card-text1">iOS, Android</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-816369/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/Dragon Ball Legends Full Animated Trailer!.mp4" height="200" width="auto"
-                autoplay controls muted loop></video>
-            <img class="screenshots" src="/media/JeuxVideo/dblegends1.webp" alt="screendbl" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/dblegends2.jpg" alt="screendbl1" height="200" width="auto">
+            <video class="videos" src="/media/JeuxVideo/Dragon Ball Legends Full Animated Trailer!.mp4" id="vdbl"
+                height="200" width="auto" autoplay controls muted loop></video>
+            <img class="screenshotssmart1" src="/media/JeuxVideo/dblegends1.webp" alt="screendbl" height="200"
+                width="115">
+            <img class="screenshotssmart1" src="/media/JeuxVideo/dblegends2.jpg" alt="screendbl1" height="200"
+                width="115">
         </div>
 
-        <!-- DB BUCCHIGIRI -->
-
-        <!-- <div class = "dbbucchigiri">
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/media/bucchigiri.jpg"  class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">DRAGON BALL Z : BUCCHIGIRI MATCH</h5>
-                        <p class="card-text">Juil. 2018, uniquement au Japon</p>
-                        <p class="card-text">iOS, Android</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <video src="/media/JeuxVideo/dragon-ball-z-bucchigiri-match-trailer-officiel.mp4" height="200" width="auto"
-        autoplay controls muted loop></video>
-            <img class = "screenshots" src ="/media/JeuxVideo/bucchigiri1.jpg" alt="screendbl" height="200" width="auto">
-            <img class = "screenshots" src="/media/JeuxVideo/bucchigiri2.jpg" alt="screendbl1" height="200" width="auto">
-</div> -->
 
         <!-- JEUX CONSOLE -->
 
@@ -126,7 +120,7 @@
 
         <div class="dbsparking">
             <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
+                <div class="row rowrange g-0">
                     <div class="col-md-4">
                         <img src="/media/JeuxVideo/Dragon-Ball-Sparking-Zero.jpg" class="img-fluid rounded-start"
                             alt="...">
@@ -135,47 +129,62 @@
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL : SPARKING ! ZERO</h5>
                             <p class="card-text">prévu 2024</p>
-                            <p class="card-text">PC,PS5,Xbox Series</p>
+                            <p class="card-text1">PC,PS5,Xbox Series</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-1720621/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/DRAGON BALL Sparking! ZERO – Announcement Trailer.mp4" height="200"
-                width="auto" autoplay controls muted loop></video>
-            <img class="screenshots" src="/media/JeuxVideo/daaaaamn.jpg" alt="daaamn" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/dbcovid.jpg" alt="dbcovid" height="200" width="auto">
+            <video class="videos1" src="/media/JeuxVideo/DRAGON BALL Sparking! ZERO – Announcement Trailer.mp4"
+                id="vidspark" height="200" width="auto" autoplay controls muted loop></video>
+            <img class="screenshots" src="/media/JeuxVideo/sparking comingsoon.jpg" id="sparkzero" height="200"
+                width="auto">
+            <img class="screenshots" src="/media/JeuxVideo/sparking comingsoon.jpg" id="sparkzero1" height="200"
+                width="auto">
         </div>
+        <br><br>
+        <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="5%" alt="gif1v1">
+        <br><br>
+
 
         <!-- DB HEROES -->
 
 
         <div class="dbheroes">
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="/media/dbheroes.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="/media/dbheroes.jpg" class="img-fluid rounded-start">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL HEROES : WORLD MISSION</h5>
                             <p class="card-text">14 oct. 2022</p>
-                            <p class="card-text">PC,Switch</p>
+                            <p class="card-text1">PC,Switch</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-940040/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/Super Dragon Ball Heroes World Mission - Launch Trailer - Nintendo Switch.mp4"
+            <video class="videos"
+                src="/media/JeuxVideo/Super Dragon Ball Heroes World Mission - Launch Trailer - Nintendo Switch.mp4"
                 height="200" width="auto" autoplay controls muted loop></video>
-            <img class="screenshots" src="/media/JeuxVideo/dbheroes.jpg" alt="screenheroes" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/dbheroes2.jpg" alt="screenheroes1" height="200" width="auto">
-
+            <img class="screenshots1" src="/media/JeuxVideo/dbheroes.jpg" alt="screenheroes" height="200" width="auto">
+            <img class="screenshots1" src="/media/JeuxVideo/dbheroes2.jpg" id="dbh" alt="screenheroes1" height="200"
+                width="auto">
         </div>
+
+        <br><br>
+        <img class="gif1" src="/media/JeuxVideo/gif/crashed-goku.gif" width="35%" height="15%" alt="gif1v1">
+        <br><br>
 
         <!-- DB KAKAROT -->
 
         <div class=dbkakarot>
             <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
+                <div class="row rowrange g-0">
                     <div class="col-md-4">
                         <img src="/media/dragonballzkakarot.png" class="img-fluid rounded-start" alt="...">
                     </div>
@@ -183,18 +192,25 @@
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL : Kakarot</h5>
                             <p class="card-text">17 janv. 2020</p>
-                            <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                            <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-1197919/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/Dragon Ball Z Kakarot Bande-annonce de lancement PS5, PS4.mp4" height="200"
-                width="auto" autoplay controls muted loop></video>
+            <video class="videos1" src="/media/JeuxVideo/Dragon Ball Z Kakarot Bande-annonce de lancement PS5, PS4.mp4"
+                id="vdbk" height="200" width="auto" autoplay controls muted loop></video>
             <img class="screenshots" src="/media/JeuxVideo/dbkakarotss.webp" alt="screenkakarot" height="200"
                 width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/dbkakarotss1.jpg" alt="screenkakarot1" height="200"
+            <img class="screenshots" src="/media/JeuxVideo/dbkakarotss1.jpg" id="dbk" alt="screenkakarot1" height="200"
                 width="auto">
         </div>
+
+        <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="15%" alt="gif1v1">
+        <br><br>
+
+
         <!-- DB FIGHTERZ -->
 
         <div class=dbfighterz>
@@ -207,21 +223,30 @@
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL FIGHTER Z</h5>
                             <p class="card-text">26 janv. 2018</p>
-                            <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                            <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-669755/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/DRAGON BALL FighterZ - E3 2017 Trailer XB1, PS4, PC.mp4" height="200"
-                width="auto" autoplay controls muted loop></video>
-            <img class="screenshots" src="/media/JeuxVideo/fighterZ1.jpg" alt="screendfz" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/fighterz_10.jpg" alt="screendbfz1" height="200" width="auto">
+            <video class="videos" src="/media/JeuxVideo/DRAGON BALL FighterZ - E3 2017 Trailer XB1, PS4, PC.mp4"
+                id="vdbfz" height="200" width="auto" autoplay controls muted loop></video>
+            <img class="screenshots1" src="/media/JeuxVideo/fighterZ1.jpg" alt="screendfz" height="200" width="auto">
+            <img class="screenshots1" src="/media/JeuxVideo/fighterz_10.jpg" id="dbfz" alt="screendbfz1" height="200"
+                width="auto">
         </div>
+
+        <br><br>
+        <img class="gif1" src="/media/JeuxVideo/gif/crashed-goku.gif" width="35%" height="15%" alt="gif1v1">
+        <br><br>
+
+
         <!-- DB XENOVERSE -->
 
         <div class="dbxenoverse">
             <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
+                <div class="row rowrange g-0">
                     <div class="col-md-4">
                         <img src="/media/xenoverse2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
@@ -229,18 +254,22 @@
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL: XENOVERSE 2</h5>
                             <p class="card-text">28 oct. 2016</p>
-                            <p class="card-text">PC, Switch, PS4, Xbox ONE </p>
+                            <p class="card-text1">PC, Switch, PS4, Xbox ONE </p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-487760/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video src="/media/JeuxVideo/Dragon Ball XENOVERSE 2 - Announcement Trailer PS4, XB1, PC.mp4" height="200"
-                width="auto" autoplay controls muted loop></video>
+            <video class="videos1"
+                src="/media/JeuxVideo/Dragon Ball XENOVERSE 2 - Announcement Trailer PS4, XB1, PC.mp4" id="vdbx"
+                height="200" width="auto" autoplay controls muted loop></video>
             <img class="screenshots" src="/media/JeuxVideo/xenoversess.jpg" alt="screenxeno" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/xenoversess1.png" alt="screenxeno1" height="200"
+            <img class="screenshots" src="/media/JeuxVideo/xenoversess1.png" id="dbx" alt="screenxeno1" height="200"
                 width="auto">
         </div>
-
+        <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="15%" alt="gif1v1">
+        <br><br>
         <!-- DB THE BREAKERS -->
 
         <div class="dbthebreakers">
@@ -253,23 +282,21 @@
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL : THE BREAKERS</h5>
                             <p class="card-text">16 juil. 2015</p>
-                            <p class="card-text">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                            <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
+                            <p class="card-text2">Test, Avis :</p>
+                              <a href="https://www.jeuxvideo.com/jeux/jeu-1490727/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <video
+            <video class="videos"
                 src="/media/JeuxVideo/Dragon Ball The Breakers - Trailer de la saison 4 & mises à jour 1er anniversaire PS4.mp4"
-                height="200" width="auto" autoplay controls muted loop></video>
-            <img class="screenshots" src="/media/JeuxVideo/thebreakers1.jpg" alt="screendtb" height="200" width="auto">
-            <img class="screenshots" src="/media/JeuxVideo/thebreakersss.jpg" alt="screentb1" height="200" width="auto">
+                id="vdbtb" height="200" width="auto" autoplay controls muted loop></video>
+            <img class="screenshots1" src="/media/JeuxVideo/thebreakers1.jpg" alt="screendtb" height="200" width="auto">
+            <img class="screenshots1" src="/media/JeuxVideo/thebreakersss.jpg" id="dbtb" alt="screentb1" height="200"
+                width="auto">
 
         </div>
-
-
-
-
-
 
 
 
@@ -280,11 +307,10 @@
 
 
 
+    <footer>
 
+    </footer>
 
-
-
-    <footer></footer>
     <script src="../js/header+footer.js"></script>
     <script src="../js/navBar.js"></script>
 </body>
