--- a/html/films.html
+++ b/html/films.html
@@ -11,6 +11,7 @@
 
 <body>
     <header></header>
+    <h1><img src="../Media films/films-13-12-2023.png" height="300" alt=""></h1>
 
     <main class="page">
         <div class="container">
@@ -139,7 +140,7 @@
                                         réduit à l'esclavage par des robots. C'est alors qu'apparaît un robot à
                                         l'effigie de Cooler.</p>
                                     <img src="../Media films/Cooler-removebg-preview.png" alt="">
-                                    <video src="Media films/[CRÉATION] Bande-annonce Les cent mille guerriers de métal - VOSTFR.mp4" controls></video>
+                                    <video src="../Media films/[CRÉATION] Bande-annonce Les cent mille guerriers de métal - VOSTFR.mp4" controls></video>
                                 </div>
                             </div>
                         </div>
@@ -148,9 +149,9 @@
                         <div class="scene scene--cardM6" onclick="flip(5)">
                             <div class="cardM">
                                 <div class="cardM__face cardM__face--front bg6">
-
-                                    <img src="../Media films/filmdbzbojack.jpg" width="1000"
-                                        height="700">
+                                    <img src="../Media films/Titre_les_mercenaires_de_l_espace-removebg-preview.png" alt="" height="200">
+                                   
+                                        
                                 </div>
                                 <div class="cardM__face cardM__face--back cardM__face--back6">
 
@@ -176,7 +177,7 @@
                                         que son fils puisse finalement ramener la paix sur Terre. Mais le combat des
                                         guerriers Z contre le plus parfait des cyborgs a attiré l'attention de nouveaux
                                         ennemis qui mettent immédiatement cap sur notre planète.</p>
-                                    <img src="personnage" alt="">
+                                    <img src="../Media films/Broly-removebg-preview.png" alt="">
                                     <video src="../Media films/DRAGON BALL SUPER - BROLY - Bande-annonce Actuellement VF.mp4" controls></video>
                                 </div>
                             </div>
