--- a/html/films.html
+++ b/html/films.html
@@ -11,7 +11,7 @@
 
 <body>
     <header></header>
-    <h1><img src="../Media films/films-13-12-2023.png" height="300" alt=""></h1>
+    <img src="../Media films/FILMS-13-12-2023.png" height="300" alt="" id="text">
 
     <main class="page">
         <div class="container">
@@ -173,10 +173,7 @@
                                 <div class="cardM__face cardM__face--back cardM__face--back7">
 
                                     <img src="../Media films/Titre_Super_Broly-removebg-preview.png" alt="" height="100">
-                                    <p>Le Cell Game s'est achevé sur un énorme sacrifice : Son Goku a donné sa vie pour
-                                        que son fils puisse finalement ramener la paix sur Terre. Mais le combat des
-                                        guerriers Z contre le plus parfait des cyborgs a attiré l'attention de nouveaux
-                                        ennemis qui mettent immédiatement cap sur notre planète.</p>
+                                    <p>La Terre est en paix après le Tournoi du Pouvoir mais Goku continue à s'entraîner, persuadé qu'il y a des forces encore plus fortes dans l'univers. En effet, Goku et Vegeta vont font face à un nouvel ennemi, le Super Saïyen Légendaire Broly, dans un combat explosif pour sauver notre planète..</p>
                                     <img src="../Media films/Broly-removebg-preview.png" alt="">
                                     <video src="../Media films/DRAGON BALL SUPER - BROLY - Bande-annonce Actuellement VF.mp4" controls></video>
                                 </div>
