--- a/html/jeux.html
+++ b/html/jeux.html
@@ -23,7 +23,7 @@
         </div>
 
 
-        <img class="vg" src="/media/JeuxVideo/gif/gokuvegetaremovebg.png" width="20%" height="15%" alt="gif1v1">
+        <a target="_blank" href="goku.html"><img src="/media/JeuxVideo/gif/gokuvegetaremovebg.png" width="20%" height="15%" alt="gif1v1" id="gokuvegeta"></a>
 
 
         <!-- <div class="imgprez">
