--- a/html/jeux.html
+++ b/html/jeux.html
@@ -177,7 +177,7 @@
         </div>
 
         <br><br>
-        <img class="gif1" src="/media/JeuxVideo/gif/crashed-goku.gif" width="35%" height="15%" alt="gif1v1">
+        <img class="gif1" src="/media/gogeta.gif" width="15%" height="15%" alt="gif1v1">
         <br><br>
 
         <!-- DB KAKAROT -->
@@ -207,7 +207,7 @@
                 width="auto">
         </div>
 
-        <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="15%" alt="gif1v1">
+        <img class="gif1" src="/media/gokuta.gif" width="30%" height="25%" alt="gif1v1">
         <br><br>
 
 
@@ -238,7 +238,7 @@
         </div>
 
         <br><br>
-        <img class="gif1" src="/media/JeuxVideo/gif/crashed-goku.gif" width="35%" height="15%" alt="gif1v1">
+        <img class="gif1" src="/media/goutou.gif" width="25%" height="15%" alt="gif1v1">
         <br><br>
 
 
@@ -268,7 +268,7 @@
             <img class="screenshots" src="/media/JeuxVideo/xenoversess1.png" id="dbx" alt="screenxeno1" height="200"
                 width="auto">
         </div>
-        <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="15%" alt="gif1v1">
+        <img class="gif1" src="/media/gotenvstrunks.gif" width="20%" height="15%" alt="gif1v1">
         <br><br>
         <!-- DB THE BREAKERS -->
 
