--- a/html/jeux.html
+++ b/html/jeux.html
@@ -86,7 +86,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL LEGENDS</h5>
-                            <p class="card-text">21 mai 2018</p>
+                            <p class="card-text">17 mai 2018</p>
                             <p class="card-text1">iOS, Android</p>
                             <p class="card-text2">Test, Avis :</p>
                               <a href="https://www.jeuxvideo.com/jeux/jeu-816369/" class="btn btn-primary">Accès au site</a>
@@ -160,7 +160,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL HEROES : WORLD MISSION</h5>
-                            <p class="card-text">14 oct. 2022</p>
+                            <p class="card-text">4 avr. 2019</p>
                             <p class="card-text1">PC,Switch</p>
                             <p class="card-text2">Test, Avis :</p>
                               <a href="https://www.jeuxvideo.com/jeux/jeu-940040/" class="btn btn-primary">Accès au site</a>
@@ -191,7 +191,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL : Kakarot</h5>
-                            <p class="card-text">17 janv. 2020</p>
+                            <p class="card-text">16 janv. 2020</p>
                             <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
                             <p class="card-text2">Test, Avis :</p>
                               <a href="https://www.jeuxvideo.com/jeux/jeu-1197919/" class="btn btn-primary">Accès au site</a>
@@ -222,7 +222,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL FIGHTER Z</h5>
-                            <p class="card-text">26 janv. 2018</p>
+                            <p class="card-text">13 janv. 2018</p>
                             <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
                             <p class="card-text2">Test, Avis :</p>
                               <a href="https://www.jeuxvideo.com/jeux/jeu-669755/" class="btn btn-primary">Accès au site</a>
@@ -253,7 +253,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL: XENOVERSE 2</h5>
-                            <p class="card-text">28 oct. 2016</p>
+                            <p class="card-text">8 oct. 2016</p>
                             <p class="card-text1">PC, Switch, PS4, Xbox ONE </p>
                             <p class="card-text2">Test, Avis :</p>
                               <a href="https://www.jeuxvideo.com/jeux/jeu-487760/" class="btn btn-primary">Accès au site</a>
@@ -281,7 +281,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">DRAGON BALL : THE BREAKERS</h5>
-                            <p class="card-text">16 juil. 2015</p>
+                            <p class="card-text">14 oct. 2022</p>
                             <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
                             <p class="card-text2">Test, Avis :</p>
                               <a href="https://www.jeuxvideo.com/jeux/jeu-1490727/" class="btn btn-primary">Accès au site</a>
