--- a/html/jeux.html
+++ b/html/jeux.html
@@ -58,7 +58,7 @@
                             <p class="card-text">16 juil. 2015</p>
                             <p class="card-text1">iOS, Android</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-434894/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-434894/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                             <p class="card-text">21 mai 2018</p>
                             <p class="card-text1">iOS, Android</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-816369/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-816369/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                             <p class="card-text">prévu 2024</p>
                             <p class="card-text1">PC,PS5,Xbox Series</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-1720621/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-1720621/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                             <p class="card-text">14 oct. 2022</p>
                             <p class="card-text1">PC,Switch</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-940040/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-940040/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                             <p class="card-text">17 janv. 2020</p>
                             <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-1197919/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-1197919/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,6 @@
         <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="15%" alt="gif1v1">
         <br><br>
 
-
         <!-- DB FIGHTERZ -->
 
         <div class=dbfighterz>
@@ -225,7 +224,7 @@
                             <p class="card-text">26 janv. 2018</p>
                             <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-669755/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-669755/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -241,7 +240,6 @@
         <img class="gif1" src="/media/JeuxVideo/gif/crashed-goku.gif" width="35%" height="15%" alt="gif1v1">
         <br><br>
 
-
         <!-- DB XENOVERSE -->
 
         <div class="dbxenoverse">
@@ -256,7 +254,7 @@
                             <p class="card-text">28 oct. 2016</p>
                             <p class="card-text1">PC, Switch, PS4, Xbox ONE </p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-487760/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-487760/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
@@ -270,6 +268,7 @@
         </div>
         <img class="gif1" src="/media/JeuxVideo/gif/gokuvsvegeta-unscreen.gif" width="20%" height="15%" alt="gif1v1">
         <br><br>
+
         <!-- DB THE BREAKERS -->
 
         <div class="dbthebreakers">
@@ -284,7 +283,7 @@
                             <p class="card-text">16 juil. 2015</p>
                             <p class="card-text1">PC, PS 5, Xbox Series, Switch, PS4, Xbox ONE</p>
                             <p class="card-text2">Test, Avis :</p>
-                              <a href="https://www.jeuxvideo.com/jeux/jeu-1490727/" class="btn btn-primary">Accès au site</a>
+                              <a target="_blank" href="https://www.jeuxvideo.com/jeux/jeu-1490727/" class="btn btn-primary">Accès au site</a>
                         </div>
                     </div>
                 </div>
